--- a/themes/hugo-theme-air/static/css/screen.css
+++ b/themes/hugo-theme-air/static/css/screen.css
@@ -463,6 +463,15 @@ margin on the iframe, cause it breaks stuff. */
     margin: 0 auto;
 }
 
+.bottom-inner {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin: 0 auto;
+    float: left;
+    text-align: left;
+}
+
 /* Centres vertically yo. (IE8+) */
 .vertical {
     display: table-cell;
