--- a/themes/hugo-theme-air/layouts/index.html
+++ b/themes/hugo-theme-air/layouts/index.html
@@ -13,6 +13,7 @@
             <a class="blog-logo" href="{{ .Permalink }}"><img src="{{ .Site.BaseURL }}{{.Site.Params.logo}}" alt="Blog Logo" /></a>
         {{end}}
         <a class="button" href="https://github.com/libreswitch"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+        <a class="button" href="https://libreswitch.org/mailman/listinfo"><i class="fa fa-reply-all" aria-hidden="true"></i> Mail Lists</a>
         <a class="button" href="https://github.com/libreswitch/libreswitch/wiki"><i class="fa fa-pencil" aria-hidden="true"></i> Wiki</a>
         <a class="button" href="https://gitter.im/libreswitch/Lobby?utm_source=share-link&utm_medium=link&utm_campaign=share-link"><i class="fa fa-users" aria-hidden="true"></i> Gitter</a>
         <a class="button" href="http://docs.libreswitch.org"><i class="fa fa-book" aria-hidden="true"></i> Docs</a>
